@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 26-07-2005 added: Correct chroma upsampling for interlaced video to the HQ renderer (fixes the inverse of the "chroma bug")
  - 26-07-2005 fixed: crash going from videos -> settings or playlist via context menu.
  - 26-07-2005 fixed: tearing with High Quality PixelShader after inital interlaced sync was added
  - 26-07-2005 fixed: Audio/Video sync was way of when using the dvdplayer and syncing interlaced video
